@@ -9,6 +9,7 @@ describe Gitlab::GitAccess, lib: true do
     ["6f6d7e7ed97bb5f0054f2b1df789b39ca89b6ff9 570e7b2abdd848b95f2f578043fc23bd6f6fd24d refs/heads/synced/git-annex",
      "6f6d7e7ed97bb5f0054f2b1df789b39ca89b6ff9 570e7b2abdd848b95f2f578043fc23bd6f6fd24d refs/heads/synced/named-branch"]
   end
+  let(:git_annex_master_changes) { "6f6d7e7ed97bb5f0054f2b1df789b39ca89b6ff9 570e7b2abdd848b95f2f578043fc23bd6f6fd24d refs/heads/master" }
 
   describe 'can_push_to_branch?' do
     describe 'push to none protected branch' do
@@ -323,6 +324,15 @@ describe Gitlab::GitAccess, lib: true do
             it { expect(access.push_access_check(git_annex_changes)).to be_allowed }
           end
 
+          describe 'git annex enabled, push to master branch' do
+            before do
+              allow(Gitlab.config.gitlab_shell).to receive(:git_annex_enabled).and_return(true)
+              allow_any_instance_of(Commit).to receive(:safe_message) { 'git-annex in me@host:~/repo' }
+            end
+
+            it { expect(access.push_access_check(git_annex_master_changes)).to be_allowed }
+          end
+
           describe 'git annex disabled' do
             before { allow(Gitlab.config.gitlab_shell).to receive(:git_annex_enabled).and_return(false) }
 
@@ -330,7 +340,7 @@ describe Gitlab::GitAccess, lib: true do
           end
         end
 
-        describe 'check commit author email' do
+        describe 'check max file size' do
           before do
             allow_any_instance_of(Gitlab::Git::Blob).to receive(:size).and_return(5.megabytes.to_i)
             project.git_hook.update(max_file_size: 2)
