@@ -54,6 +54,7 @@ v 8.5.8
 
 v 8.5.7
   - Bump Git version requirement to 2.7.3
+  - Disable git-hooks for git annex commits
 
 v 8.5.6
   - Obtain a lease before querying LDAP
